hphp/hack/test/typecheck/classname/with_tconst_bad1.php.exp
File "with_tconst_bad1.php", line 12, characters 14-15:
Unable to satisfy constraint on this type constant (Typing[4110])
File "with_tconst_bad1.php", line 7, characters 29-29:
Expected I
File "with_tconst_bad1.php", line 12, characters 19-26:
But got stdClass
